2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp: Change reference.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* Monodoc.Editor/Monodoc.Editor.mdp, Monodoc.Editor/app.desktop,
	  Monodoc.Editor.mds: Continue name changes.

	* Monodoc.Editor.mds:  Changed the MonodocEditor to Monodoc.Editor.

	* EditorUtils: Changed name to Monodoc.Editor.Utils.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  Packages.mdse, MonodocEditor.mds, EditorUtils/AssemblyInfo.cs,
	  EditorUtils/Test/TestMonoDocument.cs,
	  EditorUtils/Test/TestEcmaReader.cs, EditorUtils/Test.cs,
	  EditorUtils/EcmaUtils.mdp, EditorUtils/EditorUtils.mdp,
	  EditorUtils/MonoDocument.cs, EditorUtils/EcmaReader.cs: Changed
	  name of subproject EcmaUtils to EditorUtils.

2007-06-16  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  EcmaUtils/MonoDocument.cs, EcmaUtils/EcmaReader.cs: Added the
	  MonoDocument class.

2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EcmaUtils/Test/TestMonoDocument.cs, EcmaUtils/Test/TestEcmaReader.cs,
	  EcmaUtils/EcmaUtils.mdp, EcmaUtils/MonoDocument.cs,
	  EcmaUtils/EcmaReader.cs: Added MonoDocument class that represents a
	  monodoc ECMA-based documentation. Added a test unit for the class
	  too.

2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* EcmaUtils/Test, EcmaUtils/Test/TestEcmaReader.cs,
	  EcmaUtils/Test/Examples, EcmaUtils/Test/Examples/Accel.xml,
	  EcmaUtils/Test.cs, EcmaUtils/EcmaUtils.mdp: Adding unit test
	  infrastructure.
	* EcmaUtils/EcmaReader.cs: Changed the form of getting the EcmaUtils
	  assembly to get the XSD stream.

2007-06-14  Hector E. Gomez Morales <hectoregm@gmail.com> 

	* MonodocEditor/EditorWindow.cs, MonodocEditor/MonodocEditor.mdp,
	  MonodocEditor/gtk-gui/Monodoc.Editor.OpenDocDialog.cs,